swagger ui vuejs start

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
+#Spring config & Security
+server.port=8081
+
 #spring.security.user.name=javatalent
 #spting.security.user.password=javatalent
 # H2 Database
 
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:eventdb
+spring.datasource.url=jdbc:h2:mem:categorydb
 spring.h2.console.path=/h2
 
 spring.datasource.driverClassName=org.h2.Driver
@@ -13,3 +16,24 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=update
+
+
+
+#JDBC URL, username, password, and driver class name
+#spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+
+# Configure the template mode, prefix, suffix, and cache
+
+#spring.thymeleaf.mode=HTML
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
+#spring.thymeleaf.cache=true
+
+# Configure the template encoding and content type
+#spring.thymeleaf.encoding=UTF-8
+#spring.thymeleaf.servlet.content-type=text/html
