--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,10 @@ server.port=8081
 # H2 Database
 
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:categorydb
-spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:file:./data/demo
+spring.jpa.hibernate.ddl-auto=update
 
+spring.h2.console.path=/h2
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
