--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,10 @@
  		</dependency>
 		
 		
-		
+		<dependency>
+      		<groupId>org.mariadb.jdbc</groupId>
+      		<artifactId>mariadb-java-client</artifactId>
+	  	</dependency>
 		
 		
 		<dependency>
@@ -79,12 +82,12 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
-		</dependency>
-		<dependency>
+		</dependency>		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
