--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,12 @@ server.port=8081
 
 #spring.security.user.name=javatalent
 #spting.security.user.password=javatalent
-# H2 Database
 
+
+H2 Database
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:file:./data/demo
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.h2.console.path=/h2
 spring.datasource.driverClassName=org.h2.Driver
@@ -20,12 +21,17 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 
-#JDBC URL, username, password, and driver class name
-#spring.datasource.url=jdbc:mysql://localhost:3306/mydb
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# #JDBC URL, username, password, and driver class name
+# spring.datasource.url=jdbc:mariadb://localhost:3306/categorydb
+# spring.datasource.username=root
+# spring.datasource.password=
+# spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
+
+# # Flyway Configuration
+# spring.flyway.url=jdbc:mariadb://localhost:3306/categorydb
+# spring.flyway.user=root
+# spring.flyway.password=
 
 
 # Configure the template mode, prefix, suffix, and cache
